--- a/index.html
+++ b/index.html
@@ -23,7 +23,16 @@
                 <ul class="nav-list-women">
                   <li class="nav-item-women nav-item"><a href="#" class="link">Dress</a></li>
                   <li class="nav-item-women nav-item"><a href="#" class="link">Pants</a></li>
-                  <li class="nav-item-women nav-item"><a href="#" class="link">Shoes</a></li>
+                  <li class="nav-item-women nav-item">
+                    <a href="#" class="link">Shoes</a>
+                    <ul class="nav-list-shoes">
+                      <li class="nav-item-shoes nav-item"><a href="#" class="link">Booties</a></li>
+                      <li class="nav-item-shoes nav-item"><a href="#" class="link">Boots</a></li>
+                      <li class="nav-item-shoes nav-item"><a href="#" class="link">Brogue</a></li>
+                      <li class="nav-item-shoes nav-item"><a href="#" class="link">High Heels</a></li>
+                      <li class="nav-item-shoes nav-item"><a href="#" class="link">Combat boots</a></li>
+                    </ul>
+                  </li>
                 </ul>
               </li>
               <li class="nav-item sub-nav-item"><a class="link" href="#">Kids</a></li>
